<resources>
    <string name="app_name">NewsApp</string>
    <string name="placeholder_news_type">news type</string>
    <string name="placeholder_news_text">This is a very good news for all people around the world about peace and friendship!</string>
    <string name="placeholder_news_time">2018-12-01 07:00:15</string>
    <string name="author_placeholder">Author placeholder</string>
    <string name="i_m_alone_here">I\'m alone here!</string>
    <string name="no_network_connection">Please connect to Internet by Wifi or Mobile data!</string>
    <string name="no_internet_connection">Can\'t access to the Guardianapis.com website. Please check the Internet connection!</string>


    <!--Strings related to Settings menu-->
    <string name="settings_menu_label">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="settings_news_numbers_label">Number of News Titles</string>
    <string name="settings_news_numbers_default_value" translatable="false">10</string>
    <string name="settings_news_numbers_key" translatable="false">page-size</string>
    <string name="settings_number_of_news_hint">Must be an integer between 0 and 200</string>
    <string name="searching_hint">Searching</string>
    <string name="news_not_found">News not found!\nPlease try again with another search keyword.</string>
    <string name="settings_order_label">Order By</string>
    <string name="settings_order_key" translatable="false">order-by</string>
    <string name="settings_order_default_value" translatable="false">newest</string>
    <string name="settings_newest_order_label">Newest</string>
    <string name="settings_oldest_order_label">Oldest</string>
    <string name="settings_newest_order_value" translatable="false">newest</string>
    <string name="settings_oldest_order_value" translatable="false">oldest</string>
    <string name="setting_date_label">From Date</string>
    <string name="setting_date_key" translatable="false">from-date</string>
    <string name="setting_date_default_value" translatable="false">2018-01-01</string>
    <string name="hint_settings_date">YYYY-MM-DD (2018-01-01)</string>
</resources>
