<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_menu_label">

    <EditTextPreference
        android:defaultValue="@string/settings_news_numbers_default_value"
        android:hint="@string/settings_number_of_news_hint"
        android:inputType="number"
        android:key="@string/settings_news_numbers_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_news_numbers_label" />
    <ListPreference
        android:defaultValue="@string/settings_order_default_value"
        android:entries="@array/orderLabels"
        android:entryValues="@array/orderValues"
        android:key="@string/settings_order_key"
        android:title="@string/settings_order_label" />
    <EditTextPreference
        android:defaultValue="@string/setting_date_default_value"
        android:hint="@string/hint_settings_date"
        android:inputType="textNoSuggestions"
        android:key="@string/setting_date_key"
        android:selectAllOnFocus="true"
        android:title="@string/setting_date_label" />

</PreferenceScreen>