<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_list_item_height"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:padding="@dimen/dp_sixteen">

    <TextView
        android:id="@+id/news_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_zero"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@color/black_color"
        android:textSize="@dimen/sp_twenty"
        app:fontFamily="@font/roboto"
        tools:text="@string/placeholder_news_type" />

    <TextView
        android:id="@+id/news_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_zero"
        android:layout_weight="3"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/blue_color"
        android:textSize="@dimen/sp_sixteen"
        app:fontFamily="@font/roboto"
        tools:text="@string/placeholder_news_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newsPublishedAt"
            android:layout_width="@dimen/dp_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sp_twenty"
            app:fontFamily="serif"
            tools:text="@string/placeholder_news_time" />

        <TextView
            android:id="@+id/newsAuthor"
            android:layout_width="@dimen/dp_zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sp_twenty"
            app:fontFamily="serif"
            tools:text="@string/author_placeholder" />
    </LinearLayout>
</LinearLayout>